invest/OSGeo4W/apps/grass/grass-6.4.2RC2/include/grass/G3d.h


/*---------------------------------------------------------------------------*/

typedef struct
{

    double north, south;
    double east, west;
    double top, bottom;

    /* dimension of data in "cells"; rows == #x; cols == #y; depths == #z */
    int rows, cols, depths;

    double ns_res, ew_res, tb_res;

    int proj;			/* Projection (see gis.h) */
    int zone;			/* Projection zone (see gis.h) */

} G3D_Region;


/*---------------------------------------------------------------------------*/

struct G3D_Map;


typedef void resample_fn(struct G3D_Map *, int, int, int, void *, int);


/*---------------------------------------------------------------------------*/

typedef struct G3D_Map
{

    char *fileName;
    char *tempName;
    char *mapset;

    /* operation performed on map */
    int operation;		/* G3D_WRITE_DATA or G3D_READ_DATA */

    /* region */
    G3D_Region region;

    /* window for map */
    G3D_Region window;

    /* resmapling function used for map. default is nearest neighbor */
    resample_fn *resampleFun;

    /* units */
    char *unit;

    /* dimension of a single tile in "cells" */
    int tileX, tileY, tileZ;

    /* # of tiles in x, y, and z direction */
    int nx, ny, nz;

    /* data file specific information */

    /* file descriptor */
    int data_fd;		/* file descriptor */

    /* type in which data is stored on file */
    int type;			/* DCELL_TYPE or FCELL_TYPE */

    /* data concering the compression */
    int precision;		/* G3D_MAX_PRECISION or, 0 .. 23 for float, 
				   0 .. 52 for double */
    int compression;		/* G3D_NO_COMPRESSION or G3D_USE_COMPRESSION */
    int useLzw;			/* G3D_USE_LZW or G3D_NO_LZW */
    int useRle;			/* G3D_USE_RLE or G3D_NO_RLE */
    int useXdr;			/* G3D_USE_XDR or G3D_NO_XDR */

    /* pointer to first tile in file */
    int offset;

    /* pointer to the first index entry in file */
    long indexOffset;

    /* sizeof (long) of the system on which the file is/was written */
    int indexLongNbytes;

    /* max # bytes used in the representation of indices; this is equal to */
    /* # bytes used in the representation of "indexOffset" */
    int indexNbytesUsed;

    /* pointer to the last entry in the file */
    int fileEndPtr;

    /* indicates if index is stored in file; used for G3D_READ_DATA only */
    int hasIndex;		/* G3D_HAS_INDEX or G3D_NO_INDEX */

    /* information concerning internal storage of data */

    /* index specific information */
    /* index[i] == the offset of tile "i" in the data file */
    long *index;

    /* tileLength[i] == # bytes used to store tile "i" */
    int *tileLength;

    /* tile specific information */

    /* type in which data is stored in memory */
    int typeIntern;		/* DCELL_TYPE or FCELL_TYPE */

    /* in non-cache mode the "data" array is used to store one tile */
    char *data;

    /* index of tile currently stored in "data"; -1 if none */
    int currentIndex;

    /* cache related variables */

    int useCache;		/* 1 if cache is used */
    void *cache;		/* pointer to cache structure */
    int cacheFD;		/* file discriptor of cache file -- write mode only */
    char *cacheFileName;	/* filename of cache file -- write mode only */
    long cachePosLast;		/* position of last entry in cache file -- write */
    /* mode only */

    /* range info */
    struct FPRange range;

    /* some constants stored for efficiency */

    /* number of bytes required to store a single value of "type" */
    int numLengthExtern;

    /* number of bytes required to store a single value of "typeIntern" */
    int numLengthIntern;

    /* see header.c for details */
    int clipX, clipY, clipZ;
    int tileXY, tileSize;
    int nxy, nTiles;

    /* mask related information */

    int useMask;		/* 1 if mask is used; 0 otherwise */

} G3D_Map;

void G3d_setCacheSize(int);

int G3d_getCacheSize(void);

void G3d_setCacheLimit(int);

int G3d_getCacheLimit(void);

void G3d_setFileType(int);

int G3d_getFileType(void);

void G3d_setTileDimension(int, int, int);

void G3d_getTileDimension(int *, int *, int *);

void G3d_setErrorFun(void (*)(const char *));

void G3d_setUnit(const char *);

void G3d_initDefaults(void);


/* grass/src/libes/g3d/g3ddoubleio.c */
int G3d_writeDoubles(int, int, const double *, int);

int G3d_readDoubles(int, int, double *, int);


/* grass/src/libes/g3d/g3derror.c */
void G3d_skipError(const char *);

void G3d_printError(const char *);

void G3d_fatalError(const char *, ...) __attribute__ ((format(printf, 1, 2)))
    __attribute__ ((noreturn));

void G3d_fatalError_noargs(const char *) __attribute__ ((noreturn));

void G3d_error(const char *, ...) __attribute__ ((format(printf, 1, 2)));


/* grass/src/libes/g3d/g3dfpxdr.c */
int G3d_isXdrNullNum(const void *, int);

int G3d_isXdrNullFloat(const float *);

int G3d_isXdrNullDouble(const double *);

void G3d_setXdrNullNum(void *, int);

void G3d_setXdrNullDouble(double *);

void G3d_setXdrNullFloat(float *);

int G3d_initFpXdr(G3D_Map *, int);

int G3d_initCopyToXdr(G3D_Map *, int);

int G3d_copyToXdr(const void *, int);

int G3d_initCopyFromXdr(G3D_Map *, int);

int G3d_copyFromXdr(int, void *);


/* grass/src/libes/g3d/g3dhistory.c */
int G3d_writeHistory(const char *, struct History *);

int G3d_readHistory(const char *, const char *, struct History *);


/* grass/src/libes/g3d/g3dintio.c */
int G3d_writeInts(int, int, const int *, int);

int G3d_readInts(int, int, int *, int);


/* grass/src/libes/g3d/g3dkeys.c */
int G3d_keyGetInt(struct Key_Value *, const char *, int *);

int G3d_keyGetDouble(struct Key_Value *, const char *, double *);

int G3d_keyGetString(struct Key_Value *, const char *, char **);