OSGeo4W/apps/grass/grass-6.4.2RC2/etc/python/grass/lib/g3d.py


# c:\\osgeo4w\\usr\\src\\release_20111115_grass_6_4_2RC2\\dist.i686-pc-mingw32\\include\\grass\\G3d.h: 324
if hasattr(_libs['grass_g3d.6.4.2RC2'], 'G3d_setCacheSize'):
    G3d_setCacheSize = _libs['grass_g3d.6.4.2RC2'].G3d_setCacheSize
    G3d_setCacheSize.restype = None
    G3d_setCacheSize.argtypes = [c_int]

# c:\\osgeo4w\\usr\\src\\release_20111115_grass_6_4_2RC2\\dist.i686-pc-mingw32\\include\\grass\\G3d.h: 325
if hasattr(_libs['grass_g3d.6.4.2RC2'], 'G3d_getCacheSize'):
    G3d_getCacheSize = _libs['grass_g3d.6.4.2RC2'].G3d_getCacheSize
    G3d_getCacheSize.restype = c_int
    G3d_getCacheSize.argtypes = []

# c:\\osgeo4w\\usr\\src\\release_20111115_grass_6_4_2RC2\\dist.i686-pc-mingw32\\include\\grass\\G3d.h: 326
if hasattr(_libs['grass_g3d.6.4.2RC2'], 'G3d_setCacheLimit'):
    G3d_setCacheLimit = _libs['grass_g3d.6.4.2RC2'].G3d_setCacheLimit
    G3d_setCacheLimit.restype = None
    G3d_setCacheLimit.argtypes = [c_int]

# c:\\osgeo4w\\usr\\src\\release_20111115_grass_6_4_2RC2\\dist.i686-pc-mingw32\\include\\grass\\G3d.h: 327
if hasattr(_libs['grass_g3d.6.4.2RC2'], 'G3d_getCacheLimit'):
    G3d_getCacheLimit = _libs['grass_g3d.6.4.2RC2'].G3d_getCacheLimit
    G3d_getCacheLimit.restype = c_int
    G3d_getCacheLimit.argtypes = []

# c:\\osgeo4w\\usr\\src\\release_20111115_grass_6_4_2RC2\\dist.i686-pc-mingw32\\include\\grass\\G3d.h: 328
if hasattr(_libs['grass_g3d.6.4.2RC2'], 'G3d_setFileType'):
    G3d_setFileType = _libs['grass_g3d.6.4.2RC2'].G3d_setFileType
    G3d_setFileType.restype = None
    G3d_setFileType.argtypes = [c_int]

# c:\\osgeo4w\\usr\\src\\release_20111115_grass_6_4_2RC2\\dist.i686-pc-mingw32\\include\\grass\\G3d.h: 329
if hasattr(_libs['grass_g3d.6.4.2RC2'], 'G3d_getFileType'):
    G3d_getFileType = _libs['grass_g3d.6.4.2RC2'].G3d_getFileType
    G3d_getFileType.restype = c_int
    G3d_getFileType.argtypes = []

# c:\\osgeo4w\\usr\\src\\release_20111115_grass_6_4_2RC2\\dist.i686-pc-mingw32\\include\\grass\\G3d.h: 330
if hasattr(_libs['grass_g3d.6.4.2RC2'], 'G3d_setTileDimension'):
    G3d_setTileDimension = _libs['grass_g3d.6.4.2RC2'].G3d_setTileDimension
    G3d_setTileDimension.restype = None
    G3d_setTileDimension.argtypes = [c_int, c_int, c_int]

# c:\\osgeo4w\\usr\\src\\release_20111115_grass_6_4_2RC2\\dist.i686-pc-mingw32\\include\\grass\\G3d.h: 331
if hasattr(_libs['grass_g3d.6.4.2RC2'], 'G3d_getTileDimension'):
    G3d_getTileDimension = _libs['grass_g3d.6.4.2RC2'].G3d_getTileDimension
    G3d_getTileDimension.restype = None
    G3d_getTileDimension.argtypes = [POINTER(c_int), POINTER(c_int), POINTER(c_int)]

# c:\\osgeo4w\\usr\\src\\release_20111115_grass_6_4_2RC2\\dist.i686-pc-mingw32\\include\\grass\\G3d.h: 332
if hasattr(_libs['grass_g3d.6.4.2RC2'], 'G3d_setErrorFun'):
    G3d_setErrorFun = _libs['grass_g3d.6.4.2RC2'].G3d_setErrorFun
    G3d_setErrorFun.restype = None
    G3d_setErrorFun.argtypes = [CFUNCTYPE(UNCHECKED(None), String)]

# c:\\osgeo4w\\usr\\src\\release_20111115_grass_6_4_2RC2\\dist.i686-pc-mingw32\\include\\grass\\G3d.h: 333
if hasattr(_libs['grass_g3d.6.4.2RC2'], 'G3d_setUnit'):
    G3d_setUnit = _libs['grass_g3d.6.4.2RC2'].G3d_setUnit
    G3d_setUnit.restype = None
    G3d_setUnit.argtypes = [String]

# c:\\osgeo4w\\usr\\src\\release_20111115_grass_6_4_2RC2\\dist.i686-pc-mingw32\\include\\grass\\G3d.h: 334
if hasattr(_libs['grass_g3d.6.4.2RC2'], 'G3d_initDefaults'):
    G3d_initDefaults = _libs['grass_g3d.6.4.2RC2'].G3d_initDefaults
    G3d_initDefaults.restype = None
    G3d_initDefaults.argtypes = []

# c:\\osgeo4w\\usr\\src\\release_20111115_grass_6_4_2RC2\\dist.i686-pc-mingw32\\include\\grass\\G3d.h: 337
if hasattr(_libs['grass_g3d.6.4.2RC2'], 'G3d_writeDoubles'):
    G3d_writeDoubles = _libs['grass_g3d.6.4.2RC2'].G3d_writeDoubles
    G3d_writeDoubles.restype = c_int
    G3d_writeDoubles.argtypes = [c_int, c_int, POINTER(c_double), c_int]

# c:\\osgeo4w\\usr\\src\\release_20111115_grass_6_4_2RC2\\dist.i686-pc-mingw32\\include\\grass\\G3d.h: 338
if hasattr(_libs['grass_g3d.6.4.2RC2'], 'G3d_readDoubles'):
    G3d_readDoubles = _libs['grass_g3d.6.4.2RC2'].G3d_readDoubles
    G3d_readDoubles.restype = c_int
    G3d_readDoubles.argtypes = [c_int, c_int, POINTER(c_double), c_int]

# c:\\osgeo4w\\usr\\src\\release_20111115_grass_6_4_2RC2\\dist.i686-pc-mingw32\\include\\grass\\G3d.h: 341
if hasattr(_libs['grass_g3d.6.4.2RC2'], 'G3d_skipError'):
    G3d_skipError = _libs['grass_g3d.6.4.2RC2'].G3d_skipError
    G3d_skipError.restype = None
    G3d_skipError.argtypes = [String]

# c:\\osgeo4w\\usr\\src\\release_20111115_grass_6_4_2RC2\\dist.i686-pc-mingw32\\include\\grass\\G3d.h: 342
if hasattr(_libs['grass_g3d.6.4.2RC2'], 'G3d_printError'):
    G3d_printError = _libs['grass_g3d.6.4.2RC2'].G3d_printError
    G3d_printError.restype = None
    G3d_printError.argtypes = [String]

# c:\\osgeo4w\\usr\\src\\release_20111115_grass_6_4_2RC2\\dist.i686-pc-mingw32\\include\\grass\\G3d.h: 343
if hasattr(_libs['grass_g3d.6.4.2RC2'], 'G3d_fatalError'):
    _func = _libs['grass_g3d.6.4.2RC2'].G3d_fatalError
    _restype = None
    _argtypes = [String]
    G3d_fatalError = _variadic_function(_func,_restype,_argtypes)

# c:\\osgeo4w\\usr\\src\\release_20111115_grass_6_4_2RC2\\dist.i686-pc-mingw32\\include\\grass\\G3d.h: 345
if hasattr(_libs['grass_g3d.6.4.2RC2'], 'G3d_fatalError_noargs'):
    G3d_fatalError_noargs = _libs['grass_g3d.6.4.2RC2'].G3d_fatalError_noargs
    G3d_fatalError_noargs.restype = None
    G3d_fatalError_noargs.argtypes = [String]

# c:\\osgeo4w\\usr\\src\\release_20111115_grass_6_4_2RC2\\dist.i686-pc-mingw32\\include\\grass\\G3d.h: 346
if hasattr(_libs['grass_g3d.6.4.2RC2'], 'G3d_error'):
    _func = _libs['grass_g3d.6.4.2RC2'].G3d_error
    _restype = None
    _argtypes = [String]
    G3d_error = _variadic_function(_func,_restype,_argtypes)

# c:\\osgeo4w\\usr\\src\\release_20111115_grass_6_4_2RC2\\dist.i686-pc-mingw32\\include\\grass\\G3d.h: 349
if hasattr(_libs['grass_g3d.6.4.2RC2'], 'G3d_isXdrNullNum'):
    G3d_isXdrNullNum = _libs['grass_g3d.6.4.2RC2'].G3d_isXdrNullNum
    G3d_isXdrNullNum.restype = c_int
    G3d_isXdrNullNum.argtypes = [POINTER(None), c_int]

# c:\\osgeo4w\\usr\\src\\release_20111115_grass_6_4_2RC2\\dist.i686-pc-mingw32\\include\\grass\\G3d.h: 350
if hasattr(_libs['grass_g3d.6.4.2RC2'], 'G3d_isXdrNullFloat'):
    G3d_isXdrNullFloat = _libs['grass_g3d.6.4.2RC2'].G3d_isXdrNullFloat
    G3d_isXdrNullFloat.restype = c_int
    G3d_isXdrNullFloat.argtypes = [POINTER(c_float)]

# c:\\osgeo4w\\usr\\src\\release_20111115_grass_6_4_2RC2\\dist.i686-pc-mingw32\\include\\grass\\G3d.h: 351
if hasattr(_libs['grass_g3d.6.4.2RC2'], 'G3d_isXdrNullDouble'):
    G3d_isXdrNullDouble = _libs['grass_g3d.6.4.2RC2'].G3d_isXdrNullDouble
    G3d_isXdrNullDouble.restype = c_int
    G3d_isXdrNullDouble.argtypes = [POINTER(c_double)]

# c:\\osgeo4w\\usr\\src\\release_20111115_grass_6_4_2RC2\\dist.i686-pc-mingw32\\include\\grass\\G3d.h: 352
if hasattr(_libs['grass_g3d.6.4.2RC2'], 'G3d_setXdrNullNum'):
    G3d_setXdrNullNum = _libs['grass_g3d.6.4.2RC2'].G3d_setXdrNullNum
    G3d_setXdrNullNum.restype = None
    G3d_setXdrNullNum.argtypes = [POINTER(None), c_int]

# c:\\osgeo4w\\usr\\src\\release_20111115_grass_6_4_2RC2\\dist.i686-pc-mingw32\\include\\grass\\G3d.h: 353
if hasattr(_libs['grass_g3d.6.4.2RC2'], 'G3d_setXdrNullDouble'):
    G3d_setXdrNullDouble = _libs['grass_g3d.6.4.2RC2'].G3d_setXdrNullDouble
    G3d_setXdrNullDouble.restype = None
    G3d_setXdrNullDouble.argtypes = [POINTER(c_double)]

# c:\\osgeo4w\\usr\\src\\release_20111115_grass_6_4_2RC2\\dist.i686-pc-mingw32\\include\\grass\\G3d.h: 354
if hasattr(_libs['grass_g3d.6.4.2RC2'], 'G3d_setXdrNullFloat'):
    G3d_setXdrNullFloat = _libs['grass_g3d.6.4.2RC2'].G3d_setXdrNullFloat
    G3d_setXdrNullFloat.restype = None
    G3d_setXdrNullFloat.argtypes = [POINTER(c_float)]

# c:\\osgeo4w\\usr\\src\\release_20111115_grass_6_4_2RC2\\dist.i686-pc-mingw32\\include\\grass\\G3d.h: 355
if hasattr(_libs['grass_g3d.6.4.2RC2'], 'G3d_initFpXdr'):
    G3d_initFpXdr = _libs['grass_g3d.6.4.2RC2'].G3d_initFpXdr
    G3d_initFpXdr.restype = c_int
    G3d_initFpXdr.argtypes = [POINTER(G3D_Map), c_int]

# c:\\osgeo4w\\usr\\src\\release_20111115_grass_6_4_2RC2\\dist.i686-pc-mingw32\\include\\grass\\G3d.h: 356
if hasattr(_libs['grass_g3d.6.4.2RC2'], 'G3d_initCopyToXdr'):
    G3d_initCopyToXdr = _libs['grass_g3d.6.4.2RC2'].G3d_initCopyToXdr
    G3d_initCopyToXdr.restype = c_int
    G3d_initCopyToXdr.argtypes = [POINTER(G3D_Map), c_int]

# c:\\osgeo4w\\usr\\src\\release_20111115_grass_6_4_2RC2\\dist.i686-pc-mingw32\\include\\grass\\G3d.h: 357
if hasattr(_libs['grass_g3d.6.4.2RC2'], 'G3d_copyToXdr'):
    G3d_copyToXdr = _libs['grass_g3d.6.4.2RC2'].G3d_copyToXdr
    G3d_copyToXdr.restype = c_int
    G3d_copyToXdr.argtypes = [POINTER(None), c_int]

# c:\\osgeo4w\\usr\\src\\release_20111115_grass_6_4_2RC2\\dist.i686-pc-mingw32\\include\\grass\\G3d.h: 358
if hasattr(_libs['grass_g3d.6.4.2RC2'], 'G3d_initCopyFromXdr'):
    G3d_initCopyFromXdr = _libs['grass_g3d.6.4.2RC2'].G3d_initCopyFromXdr
    G3d_initCopyFromXdr.restype = c_int
    G3d_initCopyFromXdr.argtypes = [POINTER(G3D_Map), c_int]

# c:\\osgeo4w\\usr\\src\\release_20111115_grass_6_4_2RC2\\dist.i686-pc-mingw32\\include\\grass\\G3d.h: 359
if hasattr(_libs['grass_g3d.6.4.2RC2'], 'G3d_copyFromXdr'):
    G3d_copyFromXdr = _libs['grass_g3d.6.4.2RC2'].G3d_copyFromXdr
    G3d_copyFromXdr.restype = c_int
    G3d_copyFromXdr.argtypes = [c_int, POINTER(None)]

# c:\\osgeo4w\\usr\\src\\release_20111115_grass_6_4_2RC2\\dist.i686-pc-mingw32\\include\\grass\\G3d.h: 362
if hasattr(_libs['grass_g3d.6.4.2RC2'], 'G3d_writeHistory'):
    G3d_writeHistory = _libs['grass_g3d.6.4.2RC2'].G3d_writeHistory
    G3d_writeHistory.restype = c_int
    G3d_writeHistory.argtypes = [String, POINTER(struct_History)]

# c:\\osgeo4w\\usr\\src\\release_20111115_grass_6_4_2RC2\\dist.i686-pc-mingw32\\include\\grass\\G3d.h: 363
if hasattr(_libs['grass_g3d.6.4.2RC2'], 'G3d_readHistory'):
    G3d_readHistory = _libs['grass_g3d.6.4.2RC2'].G3d_readHistory
    G3d_readHistory.restype = c_int
    G3d_readHistory.argtypes = [String, String, POINTER(struct_History)]

# c:\\osgeo4w\\usr\\src\\release_20111115_grass_6_4_2RC2\\dist.i686-pc-mingw32\\include\\grass\\G3d.h: 366
if hasattr(_libs['grass_g3d.6.4.2RC2'], 'G3d_writeInts'):
    G3d_writeInts = _libs['grass_g3d.6.4.2RC2'].G3d_writeInts
    G3d_writeInts.restype = c_int
    G3d_writeInts.argtypes = [c_int, c_int, POINTER(c_int), c_int]

# c:\\osgeo4w\\usr\\src\\release_20111115_grass_6_4_2RC2\\dist.i686-pc-mingw32\\include\\grass\\G3d.h: 367
if hasattr(_libs['grass_g3d.6.4.2RC2'], 'G3d_readInts'):
    G3d_readInts = _libs['grass_g3d.6.4.2RC2'].G3d_readInts
    G3d_readInts.restype = c_int
    G3d_readInts.argtypes = [c_int, c_int, POINTER(c_int), c_int]

# c:\\osgeo4w\\usr\\src\\release_20111115_grass_6_4_2RC2\\dist.i686-pc-mingw32\\include\\grass\\G3d.h: 370
if hasattr(_libs['grass_g3d.6.4.2RC2'], 'G3d_keyGetInt'):
    G3d_keyGetInt = _libs['grass_g3d.6.4.2RC2'].G3d_keyGetInt
    G3d_keyGetInt.restype = c_int
    G3d_keyGetInt.argtypes = [POINTER(struct_Key_Value), String, POINTER(c_int)]

# c:\\osgeo4w\\usr\\src\\release_20111115_grass_6_4_2RC2\\dist.i686-pc-mingw32\\include\\grass\\G3d.h: 371
if hasattr(_libs['grass_g3d.6.4.2RC2'], 'G3d_keyGetDouble'):
    G3d_keyGetDouble = _libs['grass_g3d.6.4.2RC2'].G3d_keyGetDouble
    G3d_keyGetDouble.restype = c_int
    G3d_keyGetDouble.argtypes = [POINTER(struct_Key_Value), String, POINTER(c_double)]

# c:\\osgeo4w\\usr\\src\\release_20111115_grass_6_4_2RC2\\dist.i686-pc-mingw32\\include\\grass\\G3d.h: 372
if hasattr(_libs['grass_g3d.6.4.2RC2'], 'G3d_keyGetString'):
    G3d_keyGetString = _libs['grass_g3d.6.4.2RC2'].G3d_keyGetString
    G3d_keyGetString.restype = c_int
    G3d_keyGetString.argtypes = [POINTER(struct_Key_Value), String, POINTER(POINTER(c_char))]
